[feat] : 회원 쿠폰 조회 응답 추가